RESOLVED FIXED101045
REGRESSION (r133075): plugins/plugin-javascript-access.html is failing
https://bugs.webkit.org/show_bug.cgi?id=101045
Summary REGRESSION (r133075): plugins/plugin-javascript-access.html is failing
Sudarsana Nagineni (babu)
Reported 2012-11-02 05:53:27 PDT
plugins/plugin-javascript-access.html is failing on EFL and GTK ports after r133075. --- /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/layout-test-results/plugins/plugin-javascript-access-expected.txt +++ /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/layout-test-results/plugins/plugin-javascript-access-actual.txt @@ -2,7 +2,7 @@ Description: Simple Netscape® plug-in that handles test content for WebKit -Filename: libTestNetscapePlugin.so +Filename: WebKit Test PlugIn Mime Types:
Attachments
Patch (1.48 KB, patch)
2012-11-02 06:46 PDT, Sudarsana Nagineni (babu)
kenneth: review+
kenneth: commit-queue+
Sudarsana Nagineni (babu)
Comment 1 2012-11-02 06:46:44 PDT
Raphael Kubo da Costa (:rakuco)
Comment 2 2012-11-02 08:24:19 PDT
Note You need to log in before you can comment on or make changes to this bug.