REGRESSION (r133075): plugins/plugin-javascript-access.html is failing https://bugs.webkit.org/show_bug.cgi?id=101045

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2012-11-02
Reviewed by Kenneth Rohde Christiansen.

Encode the plugin filename in ArgumentCoder<PluginInfo> so that
plugin.filename returns the filename instead of name of the plugin.

* Shared/WebCoreArgumentCoders.cpp:
(CoreIPC::::encode):

Canonical link: https://commits.webkit.org/119153@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133300 268f45cc-cd09-0410-ab3c-d52691b4dbfc